# ros_gecko_robot

./: .gitignore  README.md  pixi.toml
src/cpp_pkg/: CMakeLists.txt  package.xml
src/cpp_pkg/src/: cpp_IK.cpp
src/cpp_pkg/srv/: ComputeLegIK.srv
src/gecko_robot/: package.xml  setup.cfg  setup.py
src/gecko_robot/config/: config.rviz  robot_controller.yaml
src/gecko_robot/gecko_robot/: leg_ik_client.py  leg_teleop.py  test.py  trajectory_leg_teleop.py
src/gecko_robot/launch/: combined.launch.py  combined_controller.launch.py  display.launch.py  gazebo_model.launch.py
src/gecko_robot/meshes/: base_link2.stl  empty.world  foot2.stl  leg2.stl
src/gecko_robot/model/: base_link.stl  diff_drive_robot.gazebo  diff_drive_robot.xacro  gazebo.xacro  gecko_model.xacro  leg.stl  onshape_robot.xacro  xacro_variables.xacro
